[package]
name = "sir_logger"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
keywords = ["logging", "util"]
homepage = "https://github.com/SirSpudlington/sir_logger"
repository = "https://github.com/SirSpudlington/sir_logger"
description = "A simple logging library similar to env_logger"
readme = "README.md"

exclude = [
    "images/*",
]

[dependencies]
fern = { version = "^0.6", features = ["colored"] }
humantime = "^2.1.0"
log = "^0.4.0"

[features]
no-panic-handler = []
